--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,7 @@ img {
 /* footer */
 
 .footer {
-    background: #2F303A;
+    background: var(--background-secondary-color);
     padding-top: 60px;
     padding-bottom: 60px;
 }
