--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,7 @@ ul {
 }
 
 .container {
-    width: 100%;
-    max-width: 1230px;
+    width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
     box-sizing: border-box;
@@ -50,13 +49,18 @@ img {
 
 /* header */
 
+.header {
+    border-bottom: 1px solid rgba(236, 236, 236, 1);
+   
+}
+
 .flex-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
-    border-bottom: 1px solid rgba(236, 236, 236, 1);
-}
+    
+     
+ }
 
 .logo {
     color: var(--logo-color);
@@ -75,6 +79,7 @@ img {
 
 .site-nav {
     display: flex;
+    align-items: center;
 }
 
 .nav {
@@ -85,6 +90,7 @@ img {
 }
 
 .nav-link {
+    display: block;
     padding-top: 32px;
     padding-bottom: 32px;
     color: var(--primary-text-color);
@@ -108,11 +114,14 @@ img {
 }
 
 .contact-link {
+    display: block;
+    padding: 32px 0;
     color: var(--secondary-color);
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+
 }
 
 .contact-link:hover,
@@ -130,7 +139,6 @@ img {
     max-width: 696px;
     margin: 0 auto;
     margin-bottom: 30px;
-    padding-top: 200px;
     color: var(--wite-color);
     font-weight: 900;
     font-size: 44px;
@@ -142,8 +150,11 @@ img {
     
 }
 
-.hero {
+.hero.section {
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-color:var(--background-secondary-color);
+    
 }
 
 .button {
@@ -227,10 +238,6 @@ img {
     padding-top: 0;
 }
 
-.foto-services {
-    width: 370px;
-    margin-right: 30px;
-}
 
 .services {
     background:var(--wite-color)
@@ -255,10 +262,6 @@ img {
     background: var(--background-color);
 }
 
-.team-foto {
-    margin-bottom: 30px;
-    width: 270px;
-}
 
 .team-card {
     background: var(--wite-color)
@@ -308,7 +311,6 @@ img {
 
 .physikal-address {
     display: block;
-    margin-bottom: 9px;
     color: var(--wite-color);
     font-style: normal;
     line-height: 1.71;
@@ -330,12 +332,20 @@ img {
 
 .address-footer.item {
     display: block;
-    margin-bottom: 9px;
 }
 
 .address-footer:hover,
 .address-footer:focus {
     color: var(--accent-color);
+}
+
+.address .item {
+    margin-bottom: 9px;
+
+}
+
+.address .item:last-child {
+    margin-bottom: 0;
 }
 
 
@@ -345,36 +355,29 @@ img {
     display: flex;
     justify-content: center;
     gap: 8px;
-    margin-bottom: 34px;
+    margin-bottom: 50px;
     
 }
 
 .flex-portfolio {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
 }
 
-.flex-element {
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-
-}
-
-.flex-element:nth-child(3n) {
-    margin-right: 0;
-}
 
 .portfolio-button {
-color: var(--primary-text-color);
-font-family: inherit;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.63;
-letter-spacing: 0.03em;
-background: var(--background-button);
-border-radius: 4px;
-cursor: pointer;
+    padding: 6px 22px;
+    color: var(--primary-text-color);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    letter-spacing: 0.03em;
+    background: var(--background-button);
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
 
 }
 
@@ -385,6 +388,7 @@ cursor: pointer;
 }
 
 .portfolio-title {
+    margin-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
